--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>Twitter App</title>
+    <title>Sprinty Tweet: Sprint Location Powered Twitter</title>
     <%= stylesheet_link_tag 'common' %>
     <%= stylesheet_link_tag 'login' unless signed_in? %>
     
@@ -14,7 +14,7 @@
 <body>
 <div id="header">
   <div id="header_inner">
-    <h3><%= link_to "I'd Tweet That", root_url %></h3>
+    <h3><%= link_to "I'd Sprint Power That Tweet", root_url %></h3>
     
     <%- if signed_in? -%>     
       <ul id="nav">
