--- a/app/views/layouts/_location_setup.html.erb
+++ b/app/views/layouts/_location_setup.html.erb
@@ -2,8 +2,8 @@
       <div class="info">
         Power your tweets with your location,<br/>
         Now with the Sprint Location Services.<br/>
-        Your tweets tagged with your location -- auto-magically.<br/><br/>
-        More info at developer.sprint.com.
+        Your tweets tagged with your location<br/>-- auto-magically.<br/><br/>
+        More info at <%= link_to "developer.sprint.com", "http://developer.sprint.com" %>.
       </div>
       <div class="text">
         <form method="post" action="#">
