--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <body>
 <div id="header">
   <div id="header_inner">
-    <h3><%= link_to "I'd Sprint Power That Tweet", root_url %></h3>
+    <h3><%= link_to "Sprint Power That Tweet", root_url %></h3>
     
     <%- if signed_in? -%>     
       <ul id="nav">
