tweek location setup div.

--- a/app/views/layouts/_location_setup.html.erb
+++ b/app/views/layouts/_location_setup.html.erb
@@ -1,8 +1,8 @@
     <div id="location_setup">
       <div class="info">
-        Power your tweets with your location,<br/>
-        Now with the Sprint Location Services.<br/>
-        Your tweets tagged with your location<br/>-- auto-magically.<br/><br/>
+        Power your tweets with your location,
+        Now with the Sprint Location Services.
+        Your tweets are auto-magically tagged with your location.<br/><br/>
         More info at <%= link_to "developer.sprint.com", "http://developer.sprint.com" %>.
       </div>
       <div class="text">
