--- a/app/views/layouts/_location_setup.html.erb
+++ b/app/views/layouts/_location_setup.html.erb
@@ -2,10 +2,10 @@
       <div class="info">
         Power your tweets with your location,
         Now with the Sprint Location Services.
-        Your tweets are auto-magically tagged with your location.<br/><br/>
-        More info at <%= link_to "developer.sprint.com", "http://developer.sprint.com" %>.
+        Your tweets are auto-magically tagged with your location.
       </div>
       <div class="text">
+        <span>Sign up for the location service at <%= link_to "http://sprintdevelopersandbox.com/", "http://sprintdevelopersandbox.com/" %></span>
         <form method="post" action="#">
           <label for="text">API Key</label><br/>
           <input type="text" name="apikey" /><br/>
