Adding Sprint Fields to App.

--- a/app/views/layouts/_location_setup.html.erb
+++ b/app/views/layouts/_location_setup.html.erb
@@ -1,17 +1,17 @@
-    <div id="location_setup">
-      <div class="info">
-        Power your tweets with your location,
-        Now with the Sprint Location Services.
-        Your tweets are auto-magically tagged with your location.
-      </div>
-      <div class="text">
-        <span>Sign up for the location service at <%= link_to "http://sprintdevelopersandbox.com/", "http://sprintdevelopersandbox.com/" %></span>
-        <form method="post" action="#">
-          <label for="text">API Key</label><br/>
-          <input type="text" name="apikey" /><br/>
-          <label for="text">Mobile Device</label><br/>
-          <input type="text" name="mdn" /><br/>
-          <input type="submit" value="Setup" name="commit" />
-        </form>        
-      </div>
-    </div>
+<div id="location_setup">
+  <div class="info">
+    Power your tweets with your location,
+    Now with the Sprint Location Services.
+    Your tweets are auto-magically tagged with your location.
+  </div>
+  <div class="text">
+    <span>Sign up for the location service at <%= link_to "http://sprintdevelopersandbox.com/", "http://sprintdevelopersandbox.com/" %></span>
+    <form method="post" action="#">
+      <label for="text">API Key</label><br/>
+      <input type="text" name="apikey" /><br/>
+      <label for="text">Mobile Device Number</label><br/>
+      <input type="text" name="mdn" /><br/>
+      <input type="submit" value="Setup" name="commit" />
+    </form>        
+  </div>
+</div>
