--- a/app/views/layouts/_location_setup.html.erb
+++ b/app/views/layouts/_location_setup.html.erb
@@ -8,9 +8,9 @@
     <span>Sign up for the location service at <%= link_to "http://sprintdevelopersandbox.com/", "http://sprintdevelopersandbox.com/" %></span>
     <%- form_tag setup_sprint_path, :method => :post do -%>
       <label for="text">API Key</label><br/>
-      <%= text_field_tag 'apiKey' %><br/>
-      <label for="text">Mobile Device Number</label><br/>
-      <%= text_field_tag 'mdn' %><br/>
+      <%= text_field_tag 'apiKey', "", :class => "required" %><br/>
+      <label for="text">10-Digit Mobile Device Number</label><br/>
+      <%= text_field_tag 'mdn', "", :class => "required digits", :maxlength => 10, :minlength => 10 %><br/>
       <%= submit_tag 'Setup' %>
     <%- end -%>    
   </div>
