--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -54,10 +54,15 @@
 
 	div#location_setup								{background:#FDD108 none repeat scroll 0 0; height: 143px;}
 	div#location_setup div.info				{text-align:left; padding: 7px 15px; width: 200px; font-size: 13px;}
-	div#location_setup div.text	a			{color:#00F;}
-	div#location_setup div.text	a:hover
-																	  {color:#fff; background: #009;}
+	div#location_setup a 		 					{color:#00F;}
+	div#location_setup a:hover        {color:#fff; background: #009;}
 	div#location_setup div.text				{padding: 3px 5px;}
+	
+	div#sprint_settings								{text-align:right;}
+	div#sprint_settings	span					{background:#FDD108 none repeat scroll 0 0; padding: 2px 15px;}
+	div#sprint_settings a 		 			  {color:#333; text-decoration:none;}
+	div#sprint_settings a:hover       {color:#000; background: #FDD108; text-decoration:underline;}	
+	
 
 	div#login													{float: left; width:184px; margin-left: 25px;}
 	div#welcome												{float: left; width:341px;}
