--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -109,4 +109,5 @@
     #footer div.column ul li        {margin:0 0 3px; padding:0; list-style-type:none;}
     #footer div.column ul li a      {font-size:12px; color:#666; text-decoration:none;}
     #footer div.column ul li a:hover{background:none; text-decoration:underline;}
+  #spinner													{margin:0 0 -3px 5px;}
 }
