--- a/app/views/layouts/_location_settings.html.erb
+++ b/app/views/layouts/_location_settings.html.erb
@@ -8,8 +8,10 @@
       <%= f.label :apiKey, "API Key" %><br/>
       <%= f.text_field :apiKey %><br/>      
       <%= f.label :mdn, "10-Digit Mobile Device Number" %><br/>
-      <%= f.text_field :mdn %><br/>      
-      <%= f.submit 'Edit' %>
+      <%= f.select :mdn, @sprintSettings.phones, {:include_blank => true}, :style => "width: 218px; height: 1em;" %>      
+      <%= image_tag 'ajax-loader.gif', :id => "spinner", :style => "display:none;" %>
+      <br/>
+      <%= f.submit 'Save' %>
     <%- end -%>    
   </div>
 </div>
